--- a/layouts/narrow.css
+++ b/layouts/narrow.css
@@ -12,7 +12,7 @@ aside,
   height: 500vw;
   grid-template-columns: 1fr 90vw 1fr;
   grid-template-rows:
-    45vw /*    header */
+    40vw /*    header */
     60vw /*    image */
     0.25fr /*   margin  */
     0.5fr /*  subscribe */
@@ -52,8 +52,8 @@ aside,
 }
 header {
   display: grid;
-  grid-template-columns: 1fr 40vw 1fr;
-  grid-template-rows: 1fr 40vw;
+  grid-template-columns: 1fr 35vw 1fr;
+  grid-template-rows: 1fr 35vw;
   grid-template-areas:
     "nav nav nav"
     "margin-l logo margin-r";
@@ -65,6 +65,7 @@ nav {
 }
 #nav-container {
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  text-align: center;
 }
 
 #subscribe {
